--- a/client/pages/orders.html
+++ b/client/pages/orders.html
@@ -552,23 +552,75 @@
           });
           if (result.status == 201) {
             showToast('Order Added');
+            await fetchOrders();
+            renderOrderList();
+          }
+        } else if (modalOrderMode === 'edit' && typeof editOrderIndex === 'number') {
+          const order = orders[editOrderIndex];
+          if (!order) return;
+          const result = await updateOrder(order._id, {
+            productId,
+            productName,
+            type,
+            quantity,
+            price,
+            date,
+            contactPerson,
+            contactPhone,
+          });
+          if (result.status == 200) {
+            showToast('Order Updated');
+            await fetchOrders();
             renderOrderList();
           }
         }
         closeOrderModal();
       }
 
-      function deleteOrder(index) {
+      async function deleteOrder(index) {
+        const order = orders[index];
+        if (!order) return;
         if (confirm('Are you sure you want to delete this order?')) {
-          orders.splice(index, 1);
-          showToast('Order Deleted');
-          renderOrderList();
+          const result = await deleteOrderApi(order._id);
+          if (result.status == 200) {
+            showToast('Order Deleted');
+            await fetchOrders();
+            renderOrderList();
+          }
         }
       }
 
-      function showToast(msg) {
-        alert(msg);
+      // Common modal for messages
+      function showModalMessage(msg) {
+        let modal = document.getElementById('common-modal');
+        let msgBox = document.getElementById('common-modal-msg');
+        if (!modal) {
+          modal = document.createElement('div');
+          modal.id = 'common-modal';
+          modal.style.position = 'fixed';
+          modal.style.top = '0';
+          modal.style.left = '0';
+          modal.style.width = '100vw';
+          modal.style.height = '100vh';
+          modal.style.background = 'rgba(0,0,0,0.3)';
+          modal.style.display = 'flex';
+          modal.style.alignItems = 'center';
+          modal.style.justifyContent = 'center';
+          modal.style.zIndex = '99999';
+          modal.innerHTML = `<div style="background:#fff;padding:2.2rem 2rem;border-radius:14px;box-shadow:0 8px 32px rgba(133,72,54,0.12);min-width:320px;max-width:90vw;text-align:center;">
+            <div id='common-modal-msg' style='font-size:1.1em;color:#854836;margin-bottom:1.5rem;'></div>
+            <button onclick='document.getElementById("common-modal").style.display="none"' style='background:#ffb22c;color:#854836;font-weight:700;padding:0.6em 2.2em;border-radius:8px;border:none;font-size:1em;cursor:pointer;'>OK</button>
+          </div>`;
+          document.body.appendChild(modal);
+          msgBox = document.getElementById('common-modal-msg');
+        }
+        msgBox.textContent = msg;
+        modal.style.display = 'flex';
       }
+      function showToast(msg) {
+        showModalMessage(msg);
+      }
+
 
       document.addEventListener('DOMContentLoaded', async () => {
         await populateFilterProductsDropdown();
