--- a/client/pages/products.html
+++ b/client/pages/products.html
@@ -194,11 +194,30 @@
         border-bottom: none;
       }
       .product-image-section {
-        flex: 0 0 140px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
+  position: relative;
+  flex: 0 0 140px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.quantity-badge {
+  position: absolute;
+  left: -12px;
+  top: -12px;
+  background: #fff;
+  border: 2px solid #ffb22c;
+  color: #ffb22c;
+  font-weight: 700;
+  width: 38px;
+  height: 38px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  box-shadow: 0 2px 8px rgba(133,72,54,0.10);
+  font-size: 1.1em;
+  z-index: 3;
+}
       .product-image-section img {
         width: 120px;
         height: 120px;
@@ -696,6 +715,7 @@
             card.className = 'product-card';
             card.innerHTML = `
         <div class="product-image-section">
+          <div class="quantity-badge">${typeof prod.quantity !== 'undefined' ? prod.quantity : '-'}</div>
           <img src="${imgUrl || '../assets/no-image.png'}" alt="${prod.name}" />
         </div>
         <div class="product-details-section">
